--- a/package.json
+++ b/package.json
@@ -1,21 +1,26 @@
 {
-  "name": "realestate-project",
+  "name": "realestate-backend",
   "version": "1.0.0",
-  "main": "app.js",
+  "description": "Real Estate Management System",
+  "main": "src/app.js",
   "scripts": {
-    "start": "node ./src/app.js",
-    "build": "echo 'No build step necessary'"
+    "start": "node src/app.js",
+    "dev": "nodemon src/app.js",
+    "db:generate": "prisma generate",
+    "db:push": "prisma db push",
+    "db:migrate": "prisma migrate dev",
+    "db:studio": "prisma studio",
+    "db:seed": "node prisma/seed.js"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "description": "",
   "dependencies": {
+    "express": "^4.18.2",
     "cors": "^2.8.5",
-    "express": "^4.21.0",
     "multer": "^1.4.5-lts.1",
-    "mysql2": "^3.11.3",
-    "nodemon": "^3.1.7",
-    "uuid": "^11.0.5"
+    "uuid": "^9.0.0",
+    "@prisma/client": "^5.0.0"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.1",
+    "prisma": "^5.0.0"
   }
 }
