--- a/package.json
+++ b/package.json
@@ -1,26 +1,67 @@
 {
-  "name": "realestate-backend",
-  "version": "1.0.0",
-  "description": "Real Estate Management System",
+  "name": "realestate-api",
+  "version": "2.1.0",
+  "description": "Real Estate Management System API with enhanced features",
   "main": "src/app.js",
   "scripts": {
     "start": "node src/app.js",
     "dev": "nodemon src/app.js",
-    "db:generate": "prisma generate",
-    "db:push": "prisma db push",
-    "db:migrate": "prisma migrate dev",
-    "db:studio": "prisma studio",
-    "db:seed": "node prisma/seed.js"
+    "db:init": "npx prisma db push",
+    "db:generate": "npx prisma generate",
+    "db:migrate": "npx prisma migrate dev",
+    "db:reset": "npx prisma migrate reset",
+    "db:studio": "npx prisma studio",
+    "db:seed": "node src/scripts/seed.js",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "lint": "eslint src/",
+    "lint:fix": "eslint src/ --fix",
+    "format": "prettier --write src/",
+    "build": "echo 'No build step required'",
+    "postinstall": "npx prisma generate"
   },
+  "keywords": [
+    "real-estate",
+    "api",
+    "nodejs",
+    "prisma",
+    "mysql",
+    "express"
+  ],
+  "author": "Real Estate Team",
+  "license": "MIT",
   "dependencies": {
-    "express": "^4.18.2",
+    "@prisma/client": "^5.7.1",
     "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "express-rate-limit": "^7.1.5",
+    "helmet": "^7.1.0",
+    "joi": "^17.11.0",
     "multer": "^1.4.5-lts.1",
-    "uuid": "^9.0.0",
-    "@prisma/client": "^5.0.0"
+    "mysql2": "^3.6.5"
   },
   "devDependencies": {
-    "nodemon": "^3.0.1",
-    "prisma": "^5.0.0"
-  }
+    "nodemon": "^3.0.2",
+    "prisma": "^5.7.1",
+    "eslint": "^8.55.0",
+    "prettier": "^3.1.1",
+    "jest": "^29.7.0",
+    "supertest": "^6.3.3"
+  },
+  "prisma": {
+    "schema": "src/prisma/schema.prisma"
+  },
+  "engines": {
+    "node": ">=16.0.0",
+    "npm": ">=8.0.0"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/your-username/realestate-api.git"
+  },
+  "bugs": {
+    "url": "https://github.com/your-username/realestate-api/issues"
+  },
+  "homepage": "https://github.com/your-username/realestate-api#readme"
 }
