--- a/.env
+++ b/.env
@@ -14,7 +14,8 @@ DATABASE_URL="mysql://root:@localhost:3306/realestate"
 BASE_URL=http://localhost:4002
 
 # Security
-
+JWT_SECRET="your-very-secure-jwt-secret-key-here"
+JWT_EXPIRES_IN="24y"
 # File Upload Configuration
 MAX_FILE_SIZE=10485760
 MAX_FILES_COUNT=10
