--- a/package.json
+++ b/package.json
@@ -32,21 +32,23 @@
   "license": "MIT",
   "dependencies": {
     "@prisma/client": "^5.7.1",
+    "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "express-rate-limit": "^7.1.5",
-    "helmet": "^7.1.0",
+    "express-rate-limit": "^7.5.1",
+    "helmet": "^7.2.0",
     "joi": "^17.11.0",
+    "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.6.5"
   },
   "devDependencies": {
-    "nodemon": "^3.0.2",
-    "prisma": "^5.7.1",
     "eslint": "^8.55.0",
-    "prettier": "^3.1.1",
     "jest": "^29.7.0",
+    "nodemon": "^3.0.2",
+    "prettier": "^3.1.1",
+    "prisma": "^5.7.1",
     "supertest": "^6.3.3"
   },
   "prisma": {
