--- a/.env
+++ b/.env
@@ -11,8 +11,7 @@ PORT=4002
 DATABASE_URL="mysql://root:@localhost:3306/realestate"
 
 # Server Configuration
-BASE_URL=http://localhost:4002
-
+BASE_URL=http://62.171.153.198:4002
 # Security
 JWT_SECRET="your-very-secure-jwt-secret-key-here"
 JWT_EXPIRES_IN="24y"
