--- a/.env
+++ b/.env
@@ -8,10 +8,10 @@ PORT=4002
 
 # Database Configuration
 # ✅ استخدام Prisma فقط - إزالة MySQL المباشر
-DATABASE_URL="mysql://root:@localhost:3306/realestate"
+DATABASE_URL="mysql://root:RIN9MQ3zK5S2uhdO@localhost:3306/realestate"
 
 # Server Configuration
-BASE_URL=http://62.171.153.198:4002
+BASE_URL=http://148.230.105.57:4002
 # Security
 JWT_SECRET="your-very-secure-jwt-secret-key-here"
 JWT_EXPIRES_IN="24y"
